--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;  
     h2 {
       padding-left: 16px;
       font-family: 'Quicksand', sans-serif;
@@ -34,5 +34,7 @@
         font-size: 16px; /* Set the font size as desired */
       }
     }
+
+    
   }
   
